--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,14 @@
-header, .project:not(:last-child) {
+header, .blog:not(:last-child) {
   border-bottom: 1px solid #ccc;
+}
+
+footer {
+  text-align: center;
+  border-top: 1px solid #ccc;
+}
+
+footer p {
+  padding: 20px;
 }
 
 .no-button {
@@ -21,4 +30,8 @@ header, .project:not(:last-child) {
   color: #056605;
   font-weight: bold;
   margin-left: -5px;
+}
+
+p.posted-by {
+  font-size: small;
 }
