--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,5 +1,26 @@
-<div class="text-center">
-  <h2>{{title}}</h2>
-  <p class="posted-by">Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>{{description}}</p>
-</div>
+<form class="form new-blog-form">
+  <div class="row mt-4">
+    <div class="col-md-6">
+      <h3>Blog Post:</h3>
+      <div class="form-group">
+        <label for="blog-title">blog title:</label>
+        <input class="form-input" type="text" id="blog-title" name="blog-title" value="{{title}}" {{#if
+          logged_in}}{{else}}disabled{{/if}} />
+        <p class="posted-by">Posted by {{user.name}} on {{format_date date_created}}</p>
+      </div>
+      <div class="form-group">
+        <label for="blog-desc">description:</label>
+        <textarea class="form-input" id="blog-desc" name="blog-desc" {{#if
+          logged_in}}{{else}}disabled{{/if}}>{{description}}</textarea>
+      </div>
+      {{#if logged_in}}
+      <div class="form-group">
+        <button class="btn btn-primary blog-edit" data-id="{{id}}">Edit</button>
+        <button class="btn btn-primary blog-delete" data-id="{{id}}">Delete post</button>    
+      </div>
+      {{/if}}
+    </div>
+  </div>
+</form>
+<button class="btn btn-primary blog-cancel">Cancel</button>
+<script src="/js/blog.js"></script>
