--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -3,11 +3,9 @@
     <h2>Welcome, {{name}}!</h2>
   </div>
 </div>
-
 <div class="row mt-4">
   <div class="col-md-6">
     <h3>Create a New blog:</h3>
-
     <form class="form new-blog-form">
       <div class="form-group">
         <label for="blog-title">blog title:</label>
@@ -18,27 +16,10 @@
         <textarea class="form-input" id="blog-desc" name="blog-desc"></textarea>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button class="btn btn-primary blog-create">Create</button>
       </div>
     </form>
+    <button class="btn btn-primary blog-cancel">Cancel</button>
   </div>
-
-  {{#if blogs.length}}
-  <div class="col-md-6 blog-list">
-    <h3>Current Blogs:</h3>
-
-    {{#each blogs as |blog|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/blog/{{blog.id}}">{{blog.title}}</a></h4>
-      </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{blog.id}}">DELETE</button>
-      </div>
-    </div>
-    {{/each}}
-  </div>
-  {{/if}}
 </div>
-
-<script src="./js/profile.js"></script>
+<script src="./js/blogpost.js"></script>
