--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
       {{{get_emoji}}}
       <a href="/blog/{{blog.id}}">{{blog.title}}</a>
     </h2>
-    <p class="posted-by">Posted by {{blog.user.title}} on {{format_date blog.date_created}}</p>
+    <p class="posted-by">Posted by {{blog.user.name}} on {{format_date blog.date_created}}</p>
     <p>
       {{blog.description}}
     </p>
