--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,10 +17,11 @@
         <a href="/">Our Tech Blog</a>
       </h1>
       <nav>
-        <a href="/">Home</a> |
+        <a href="/">Home</a> | 
+        <!-- requirememts suggest dashboard on homepage, goes to login page when not logged in -->
+        <a href="/dashboard">Dashboard</a> |
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">Dashboard</a> |
         <button class="no-button" id="logout">Logout</button>
         {{else}}
         <a href="/login">Login</a>
@@ -41,6 +42,7 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+
 </body>
 
 </html>
