--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -22,5 +22,7 @@
     </div>
   </div>
 </form>
+{{#if logged_in}}
 <button class="btn btn-primary blog-cancel">Cancel</button>
+{{/if}}
 <script src="/js/blog.js"></script>
