--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,7 +1,7 @@
 <form class="form new-blog-form">
   <div class="row mt-4">
     <div class="col-md-6">
-      <h3>Blog Post:</h3>
+      <h3>Blog:</h3>
       <div class="form-group">
         <label for="blog-title">blog title:</label>
         <input class="form-input" type="text" id="blog-title" name="blog-title" value="{{title}}" {{#if
@@ -16,13 +16,30 @@
       {{#if logged_in}}
       <div class="form-group">
         <button class="btn btn-primary blog-edit" data-id="{{id}}">Edit</button>
-        <button class="btn btn-primary blog-delete" data-id="{{id}}">Delete post</button>    
+        <button class="btn btn-primary blog-delete" data-id="{{id}}">Delete post</button>     
       </div>
       {{/if}}
     </div>
   </div>
 </form>
 {{#if logged_in}}
+<button class="btn btn-primary blog-comment" data-id="{{id}}">Create comment</button>
 <button class="btn btn-primary blog-cancel">Cancel</button>
 {{/if}}
+<br /><br />
+{{#if comments.length}}
+<div class="col-md-20 blog-list post-delete">
+  <h3>Comments:</h3>
+  {{#each comments as |comment| }}
+  <div class="row mb-20">
+    <div class="col-md-8">
+      <p class="posted-by">Posted on {{format_date comment.date_created}}</p>
+      {{comment.comment}}
+      </p>
+    </div>
+  </div>
+  {{/each}}
+</div>
+{{/if}}
+
 <script src="/js/blog.js"></script>
