--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -5,7 +5,7 @@
 </div>
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Create a New blog:</h3>
+    <h3>Blog create:</h3>
     <form class="form new-blog-form">
       <div class="form-group">
         <label for="blog-title">blog title:</label>
