--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -6,7 +6,7 @@
         <label for="blog-title">blog title:</label>
         <input class="form-input" type="text" id="blog-title" name="blog-title" value="{{title}}" {{#if
           logged_in}}{{else}}disabled{{/if}} />
-        <p class="posted-by">Posted by {{user.name}} on {{format_date date_created}}</p>
+        <p class="posted-by">Posted by {{name}} on {{format_date date_created}}</p>
       </div>
       <div class="form-group">
         <label for="blog-desc">description:</label>
@@ -33,7 +33,7 @@
   {{#each comments as |comment| }}
   <div class="row mb-20">
     <div class="col-md-8">
-      <p class="posted-by">Posted on {{format_date comment.date_created}}</p>
+      <p class="posted-by">Posted by {{name}} on {{format_date comment.date_created}}</p>
       {{comment.comment}}
       </p>
     </div>
