--- a/views/commentpost.handlebars
+++ b/views/commentpost.handlebars
@@ -12,7 +12,7 @@
         <textarea class="form-input" id="comment-comment" name="comment-comment"></textarea>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary comment-create" data-id="{{blog.id}}">Create</button>
+        <button class="btn btn-primary comment-create" data-id="{{blog.id}}" data-user="{{user.id}}">Create</button>
       </div>
     </form>
     <button class=" btn btn-primary comment-cancel">Cancel</button>
